# geo-refresh-pipeline

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  requirements-dev.txt  requirements-sql.txt  requirements.txt
.github/workflows/: ci.yml
examples/: freshness-demo.html  multi-source.yml  pipeline.yml
examples/data/: stations.csv
examples/workflows/: refresh-map-data.yml
src/geo_refresh/: __init__.py  __main__.py  atomic.py  cli.py  config.py  diffing.py  envsubst.py  errors.py  expressions.py  formats.py  geometry.py  hashing.py  logging.py  manifest.py  outputs.py  pipeline.py  retry.py  scaffold.py  selectors.py  sources.py  state.py  transforms.py
src/geo_refresh/assets/: freshness-badge.css  freshness-badge.js
tests/: conftest.py  test_action.py  test_badge.py  test_cli.py  test_config.py  test_formats.py  test_hashing_and_diff.py  test_manifest_and_io.py  test_pipeline.py  test_sources_http.py  test_sources_sql.py  test_sql_optional.py  test_transforms.py
