[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-refresh-pipeline"
version = "1.0.0"
description = "Declarative, scheduled refresh pipeline for map data, with change detection and a freshness manifest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "geo-dashboard.com" }]
keywords = ["geojson", "gis", "pipeline", "data-refresh", "github-actions", "geospatial"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "httpx>=0.27,<0.29",
]

[project.optional-dependencies]
sql = ["SQLAlchemy>=2.0,<3.0"]
dev = ["pytest>=8.0,<10.0", "jsonschema>=4.21,<5.0", "SQLAlchemy>=2.0,<3.0"]

[project.scripts]
geo-refresh = "geo_refresh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geo_refresh = ["assets/*.js", "assets/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]
